--- a/index.html
+++ b/index.html
@@ -1599,7 +1599,7 @@
     <div class="header">
         <div class="logo-container">
             <a href="index.html" onclick="window.location.href='index.html'; return false;" style="text-decoration: none; height: 100%; display: flex; align-items: center;">
-                <img src="Vårdbasen ny.png" alt="Vårdbasen.se" class="logo">
+                <img src="Vardbasenny.png" alt="Vårdbasen.se" class="logo">
             </a>
         </div>
         <div class="header-buttons">
